--- a/client/src/styling/Register.css
+++ b/client/src/styling/Register.css
@@ -1,53 +1,51 @@
 .register-master {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.register-form {
-    background-color: #fff;
+    max-width: 400px;
+    margin: auto; /* Center horizontally */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center vertically */
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #ffffffb0;
     text-align: center;
 }
 
+.register-error {
+    color: #e74c3c;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
 .register-header {
-    font-size: 1.5rem;
+    font-size: 24px;
     margin-bottom: 20px;
 }
 
-.register-dropdown,
-.login-register {
+.register-input, .register-dropdown {
     width: 90%;
     padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    background-color: #f9f9f9;
-    color: #333;
-    transition: border-color 0.3s ease-in-out;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
 }
 
-.register-dropdown:focus,
-.login-register:focus {
-    outline: none;
-    border-color: #1569C7; /* Focus color */
-}
-
-.login-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #1569C7; /* Button color */
-    color: #fff;
+.register-button {
+    width: 100%;
+    padding: 10px;
+    background-color: #3498db;
+    color: #ffffff;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
+    font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
-    font-weight: 600;
 }
 
-.login-button:hover {
-    background-color: #135AA2; /* Darker button color on hover */
+.register-button:hover {
+    background-color: #2980b9;
 }
+
