--- a/client/src/styling/MyTeam.css
+++ b/client/src/styling/MyTeam.css
@@ -35,3 +35,31 @@ table {
     width: 50px;
     height: 20px;
 }
+
+.login-advisement {
+    font-size: 36px; 
+    margin-bottom: 20px;
+    background-color: #ffffffb9; 
+    border: 2px solid aqua; 
+    border-radius: 10px; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+    padding: 20px; 
+    max-width: 600px; 
+    margin: 0 auto; 
+}
+
+.images-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px; 
+}
+
+.images-container img:not(:last-child) {
+    margin-right: 20px;
+}
+
+/* Add hover effect to images */
+.images-container img:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+}
