--- a/client/src/styling/OtherTeams.css
+++ b/client/src/styling/OtherTeams.css
@@ -18,7 +18,7 @@ table {
     background-color: #f7f7f7;
 }
 
-.container-name {
+.other-team-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,4 +27,13 @@ table {
 
 .opps-tables {
     margin-top: -750px;
+}
+
+.team-view-select {
+    width: 15%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
 }
