--- a/client/src/styling/RosterPlanner.css
+++ b/client/src/styling/RosterPlanner.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    overflow: auto;
+    overflow: clip;
 }
 
 .roster-table {
@@ -17,8 +17,6 @@
     padding: 10px 20px;
     text-align: center;
     background-color: #f2f2f2;
-    position: sticky;
-    top: 0;
 }
 
 .table-cell {
