--- a/client/src/styling/Main.css
+++ b/client/src/styling/Main.css
@@ -1,1 +1,12 @@
-
+.greeting-div {
+    text-align: center;
+    margin-bottom: 20px;
+    background-color: #ffffffb9; 
+    border: 2px solid aqua; 
+    border-radius: 10px; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+    padding: 20px; 
+    max-width: 400px; 
+    margin-top: 20px;
+    margin-left: 20px;
+}
