--- a/client/src/styling/MyTeam.css
+++ b/client/src/styling/MyTeam.css
@@ -80,3 +80,14 @@ table {
 .edit-buttons:hover {
     background-color: #2980b9;
 }
+
+.running-out-of-names { 
+    margin-bottom: 20px;
+    background-color: #ffffffb9; 
+    border: 2px solid aqua; 
+    border-radius: 10px; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+    padding: 20px; 
+    max-width: 400px; 
+    margin-top: 20px;
+}
